Update version of the Rouen Localization examples